# workout-assistant

./: .gitignore  CLAUDE.md  REQUIREMENTS.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: categories.py  plans.py  settings.py  videos.py
backend/app/services/: ai_planner.py  downloader.py  video_processor.py
backend/tests/: conftest.py  test_ai_planner.py  test_api_categories.py  test_api_plans.py  test_api_videos.py  test_downloader.py  test_models.py  test_video_processor.py
e2e/: playwright.config.ts
e2e/specs/: category-management.spec.ts  library-browse.spec.ts  plans.spec.ts  responsive.spec.ts  settings.spec.ts  stats.spec.ts  video-import.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: CategoriesPage.tsx  LibraryPage.test.tsx  LibraryPage.tsx  PlanHistoryPage.tsx  PlansPage.test.tsx  PlansPage.tsx  SettingsPage.tsx  StatsPage.tsx  VideoDetailPage.tsx
frontend/src/types/: index.ts
plan-build-validate/sessions/workout-assistant-v1/: implementation_plan.md  user_requirements.md  validation_criteria.md
scripts/: dev.sh  start.sh
